[gd_scene load_steps=11 format=3 uid="uid://boaq4yauehfwj"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_tl8dl"]
[ext_resource type="Script" path="res://scripts/record.gd" id="2_0gg63"]
[ext_resource type="Texture2D" uid="uid://qjiywcfu6gin" path="res://assets/button_background_new2.png" id="2_bivxc"]
[ext_resource type="Script" path="res://scripts/upload.gd" id="3_d8obg"]
[ext_resource type="Texture2D" uid="uid://47ru5i5x08qa" path="res://assets/button_background_new.png" id="3_doivf"]
[ext_resource type="Texture2D" uid="uid://daovj1mj1hrfk" path="res://assets/volume_bar_2.png" id="6_fwg4s"]
[ext_resource type="Texture2D" uid="uid://bhwwopny0smf4" path="res://assets/volume_bar_3.png" id="7_1lss0"]

[sub_resource type="AudioStreamMicrophone" id="AudioStreamMicrophone_0gdau"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_r46fs"]
texture = ExtResource("2_bivxc")
texture_margin_left = 16.0
texture_margin_top = 16.0
texture_margin_right = 16.0
texture_margin_bottom = 16.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hmsyy"]
texture = ExtResource("3_doivf")
texture_margin_left = 16.0
texture_margin_top = 16.0
texture_margin_right = 16.0
texture_margin_bottom = 16.0

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tl8dl")

[node name="AskQuestion" type="HTTPRequest" parent="."]

[node name="CreateDialog" type="HTTPRequest" parent="."]

[node name="recording_identify" type="Node2D" parent="."]
script = ExtResource("2_0gg63")

[node name="mic_input" type="AudioStreamPlayer" parent="recording_identify"]
stream = SubResource("AudioStreamMicrophone_0gdau")
bus = &"Record"

[node name="record_button" type="Button" parent="recording_identify"]
offset_left = 544.0
offset_top = 163.0
offset_right = 736.0
offset_bottom = 256.0
theme_override_colors/font_hover_pressed_color = Color(1, 0.843137, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.843137, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 0.843137, 0, 1)
theme_override_colors/font_focus_color = Color(1, 1, 0, 1)
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxTexture_r46fs")
theme_override_styles/hover = SubResource("StyleBoxTexture_hmsyy")
theme_override_styles/pressed = SubResource("StyleBoxTexture_hmsyy")
theme_override_styles/normal = SubResource("StyleBoxTexture_hmsyy")
text = "开始演讲"

[node name="upload_recording" type="Node2D" parent="recording_identify"]
script = ExtResource("3_d8obg")

[node name="HTTPRequest" type="HTTPRequest" parent="recording_identify/upload_recording"]

[node name="url_update" type="HTTPRequest" parent="recording_identify/upload_recording"]

[node name="Timer" type="Timer" parent="."]

[node name="count_down" type="Label" parent="Timer"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 50.0
offset_right = 20.0
offset_bottom = 124.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxTexture_hmsyy")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="TextureProgressBar" type="TextureProgressBar" parent="Timer"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -565.0
offset_right = 565.0
offset_bottom = 45.0
grow_horizontal = 2
max_value = 0.6
step = 0.01
value = 0.6
nine_patch_stretch = true
stretch_margin_left = 20
stretch_margin_top = 20
stretch_margin_right = 20
stretch_margin_bottom = 20
texture_under = ExtResource("6_fwg4s")
texture_progress = ExtResource("7_1lss0")

[connection signal="request_completed" from="AskQuestion" to="." method="_on_ask_question_request_completed"]
[connection signal="request_completed" from="CreateDialog" to="." method="_on_create_dialog_request_completed"]
[connection signal="finished" from="recording_identify/mic_input" to="recording_identify" method="_on_mic_input_finished"]
[connection signal="pressed" from="recording_identify/record_button" to="recording_identify" method="_on_record_button_pressed"]
[connection signal="request_completed" from="recording_identify/upload_recording/HTTPRequest" to="recording_identify/upload_recording" method="_on_http_request_request_completed"]
[connection signal="request_completed" from="recording_identify/upload_recording/url_update" to="recording_identify/upload_recording" method="_on_url_update_request_completed"]
[connection signal="timeout" from="Timer" to="recording_identify" method="_on_timer_timeout"]
